Fixed squished images in OBS

--- a/public/style.css
+++ b/public/style.css
@@ -79,6 +79,7 @@ body {
 
 .picture-round .scoreItem img {
 	width: var(--image-size);
+	height: var(--image-size);
 	border-radius: 50%;
 	object-fit: cover;
 	aspect-ratio: 1;
